<?xml version="1.0"?>
<package format="2">
  <name>rqt_multiplot</name>
  <version>0.0.27</version>
  <description>rqt_multiplot provides a GUI plugin for visualizing numeric values in multiple 2D plots using the Qwt plotting backend.</description>
  <author email="ralf.kaestner@gmail.com">Ralf Kaestner</author>
  <maintainer email="sbachmann@anybotics.com">Samuel Bachmann</maintainer>
  <maintainer email="pleemann@anybotics.com">Philipp Leemann</maintainer>
  <license>GNU Lesser General Public License (LGPL)</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rosbag</depend>
  <depend>roscpp</depend>
  <depend>rqt_gui</depend>
  <depend>rqt_gui_cpp</depend>
  <depend>variant_topic_tools</depend>
  <depend>libqwt-qt5-dev</depend>
  <depend>qtbase5-dev</depend>

  <test_depend>gtest</test_depend>
<!--   <test_depend>cmake_code_coverage</test_depend> -->

  <export>
    <architecture_independent/>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
