<?xml version="1.0"?>
<package>
  <name>rqt_multiplot</name>
  <version>0.0.5</version>
  <description>
    rqt_multiplot provides a GUI plugin for visualizing numeric values
    in multiple 2D plots using the Qwt plotting backend.
  </description>
  <author>Ralf Kaestner</author>
  <maintainer email="ralf.kaestner@gmail.com">Ralf Kaestner</maintainer>
  <maintainer email="samuel.bachmann@gmail.com">Samuel Bachmann</maintainer>
  <license>GNU Lesser General Public License (LGPL)</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>rosbag</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rqt_gui</build_depend>
  <build_depend>rqt_gui_cpp</build_depend>
  <build_depend>variant_topic_tools</build_depend>
  <build_depend>libqwt6</build_depend>

  <run_depend>rosbag</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>rqt_gui_cpp</run_depend>
  <run_depend>variant_topic_tools</run_depend>
  
  <export>
    <architecture_independent/>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
